# timetable-parser

./: .gitignore  Cargo.toml  README.md  classes_data.json  dataset.xlsx  file.txt
migrations/: 20240715123503_create_tables.down.sql  20240715123503_create_tables.up.sql
src/: database.rs  helpers.rs  json_parser.rs  main.rs  model.rs
