[package]
name = "timetable-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.38.0", features = ["full"]}
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "migrate"] }
dotenv = "0.15.0"
